--- a/app/views/index.html
+++ b/app/views/index.html
@@ -71,6 +71,28 @@
           </p>
       </div>
     </div>
+
+    <!--Responsive columns snipet code-->
+    <!-- <div class="container">
+    <div class='col-md-4' 'col-xs-4'>
+      <h2>Twisted</h2>
+      <p>PLACE DE LA FONTAINE STRAVINSKY QUAI DE VALMY RUE D’ULM - PLACE DU PANTHEON 750 BOOST GREY WITH GUM SOLE HYATT REGENCY HOTEL DRIVE AND REUNION BLVD EAST @ 10:30PM KEATING DRIVE AND COTTON BOWL CIRCLE @ 11:30PM I forgot to add Daniel Ek</p>
+    </div>
+
+    <div class='col-md-4' 'col-xs-4'>
+      <h2>Throne</h2>
+      <p>TOUR Tune into Big Boy's 92.3 I'm about to play the first single from Cruel Winter MONROE AVENUE AND ST ANTOINE STREET @ 11:00PM WOODWARD AVENUE AND WATSON STREET @ 11:45PM ALFRED STREET AND RIOPELLE STREET @ 12:30AM My favorite song this year</p>
+    </div>
+
+    <div class='col-md-4' 'col-xs-4'>
+      <h2>Pablo</h2>
+      <p>PABLO TEMPORARY STORE JUNE 24-25 11AM-8PM AT 40 RUE DE RICHELIEU IN PARIS First burger of the day goes to Ye FAMOUS VIEWINGS IN OAKLAND TONIGHT STARTING @ 9:30PM BROADWAY AND W GRAND AVENUE 21ST STREET AND KAISER PLAZA Tonight at the Forum the doors open at 6 and the visual plays at 7pm sharp</p>
+    </div> -->
+
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src='js/bootstrap.js'></script>
+  </div>
     <footer class="primary-footer">
       <small class="copyright">&copy; Bay Area Bike Share</small>
       <ul class="social-media">
