--- a/app/views/stations/show.erb
+++ b/app/views/stations/show.erb
@@ -1,8 +1,11 @@
 <div class="station">
   <h1><%= @station.name %></h1>
-
   <h2>Info</h2>
   <p>Dock Count: <%= @station.dock_count %></p>
   <p>City: <%= @station.city %></p>
   <p>Installation Date: <%= @station.installation_date %></p>
+  <form action="/stations/<%= @station.id %>" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="Delete Station">
+  </form>
 </div>
