--- a/app/views/stations/show.erb
+++ b/app/views/stations/show.erb
@@ -4,6 +4,7 @@
   <p>Dock Count: <%= @station.dock_count %></p>
   <p>City: <%= @station.city %></p>
   <p>Installation Date: <%= @station.installation_date %></p>
+  <p><a href="/stations/<%= @station.id %>/edit">Edit Station</a></p>
   <form action="/stations/<%= @station.id %>" method="POST">
     <input type="hidden" name="_method" value="DELETE">
     <input type="submit" value="Delete Station">
