--- a/app/views/stations/index.erb
+++ b/app/views/stations/index.erb
@@ -2,9 +2,10 @@
 
 <div class="stations">
   <% @stations.each do |station| %>
-    <h3>Name: <%= station.name %></h3>
-    <h3>Dock Count: <%= station.dock_count %></h3>
-    <h3>City: <%= station.city %></h3>
-    <p>Installation Date: <%= station.installation_date %></p>
+  <ul>
+    <li>Name: <%= station.name %></li>
+    <li>Dock Count: <%= station.dock_count %></li>
+    <li>City: <%= station.city %></li>
+    <li>Installation Date: <%= station.installation_date %></li>
   <% end %>
 </div>
