--- a/app/views/stations/edit.erb
+++ b/app/views/stations/edit.erb
@@ -3,7 +3,7 @@
     <input type="hidden" name="_method" value="PUT"/>
     <input type="text" name="station[name]" value = "<%= @station.name %>" placeholder="Name"/><br>
     <input type="integer" name="station[dock_count]" value="<%= @station.dock_count %>" placeholder="Dock Count"/><br>
-    <input type="text" name="station[city]" value="<%= @station.city %>" placeholder="City"/><br>
+    <input type="text" name="station[city_name]" value="<%= @station.city.name %>" placeholder="City"/><br>
     <input type="date" name="station[installation_date]" value="<%= @station.installation_date %>" placeholder="Installation Date"/><br>
     <input type="submit" value="Submit Changes"/>
   </form>
