--- a/app/views/stations/index.erb
+++ b/app/views/stations/index.erb
@@ -5,7 +5,7 @@
   <ul>
     <li>Name: <%= station.name %></li>
     <li>Dock Count: <%= station.dock_count %></li>
-    <li>City: <%= station.city %></li>
+    <li>City: <%= station.city.name %></li>
     <li>Installation Date: <%= station.installation_date %></li>
   <% end %>
 </div>
