--- a/app/views/stations/new.erb
+++ b/app/views/stations/new.erb
@@ -7,7 +7,7 @@
     <label for="dock_count">Dock Count: </label>
     <input type="textfield" name="station[dock_count]">
     <label for="city">City: </label>
-    <input type="textfield" name="station[city]">
+    <input type="textfield" name="station[city_name]">
     <label >Installation Date: </label>
     <input type="textfield" name="station[installation_date]">
     <input type="submit" value="Create New Station" />
