--- a/app/views/stations/show.erb
+++ b/app/views/stations/show.erb
@@ -2,7 +2,7 @@
   <h1><%= @station.name %></h1>
   <h2>Info</h2>
   <p>Dock Count: <%= @station.dock_count %></p>
-  <p>City: <%= @station.city %></p>
+  <p>City: <%= @station.city.name %></p>
   <p>Installation Date: <%= @station.installation_date %></p>
   <p><a href="/stations/<%= @station.id %>/edit">Edit Station</a></p>
   <form action="/stations/<%= @station.id %>" method="POST">
