adds order trips by data in controller  and previous_next buttons in index view

--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -15,6 +15,12 @@
       <input type="submit" value="Delete Trip">
     </form>
   <% end %>
+  <nav aria-label="...">
+    <ul class="pager">
+      <li><a href="#">Previous</a></li>
+      <li><a href="#">Next</a></li>
+    </ul>
+  </nav>
 </div>
 
 <%# Figure out how to order trips by date, only display 30trips at a time and the buttons to back and forth%>
