--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -2,15 +2,16 @@
 
 <div class="trips">
   <% @trips.each do |trip| %>
-    <h3>Duration: <%= station.duration %></h3>
-    <h3>Start Date: <%= station.start_date %></h3>
-    <h3>Start Station: <%= station.start_station %></h3>
-    <h3>End Date: <%= station.end_date %></h3>
-    <h3>End Station: <%= station.end_station %></h3>
-    <h3>Bike ID: <%= station.bike_id %></h3>
-    <h3>Subscription Type: <%= station.subscription_type %></h3>
-    <h3>Zip Code: <%= station.zip_code %></h3>
-    <form action="/trips/<%= @trip.id %>" method="POST">
+    <h3>Duration: <%= trip.duration %></h3>
+    <h3>Start Date: <%= trip.start_date %></h3>
+    <h3>Start Station: <%= trip.start_station.name %></h3>
+    <h3>End Date: <%= trip.end_date %></h3>
+    <h3>End Station: <%= trip.end_station.name %></h3>
+    <h3>Bike ID: <%= trip.bike_id %></h3>
+    <h3>Subscription Type: <%= trip.subscription_id %></h3>
+    <h3>Zip Code: <%= trip.zipcode %></h3>
+    <%# DO WE NEED TO DISPLAY CREATED_AT AND UPDATED_AT??%>
+    <form action="/trips/<%= trip.id %>" method="POST">
       <input type="hidden" name="_method" value="DELETE">
       <input type="submit" value="Delete Trip">
     </form>
