--- a/app/views/trips/new.erb
+++ b/app/views/trips/new.erb
@@ -9,15 +9,15 @@
     <label for="name">End Date: </label>
     <input type="date" name="trip[end_date]">
     <label for="name">Start Station: </label>
-    <input type="text" name="trip[start_station]">
+    <input type="text" name="trip[start_station_id]">
     <label for="name">En Station: </label>
-    <input type="text" name="trip[end_station]">
+    <input type="text" name="trip[end_station_id]">
     <label for="name">Bike ID: </label>
     <input type="integer" name="trip[bike_id]">
     <label for="name">Subscription Type: </label>
-    <input type="text" name="trip[subscription_type]">
+    <input type="text" name="trip[subscription_id]">
     <label for="name">Zip Code: </label>
-    <input type="integer" name="trip[zip_code]">
-    <input type="submit" value="Create New Station" />
+    <input type="integer" name="trip[zipcode]">
+    <input type="submit" value="Create New Trip" />
   </form>
 </div>
