--- a/app/views/trips/show.erb
+++ b/app/views/trips/show.erb
@@ -1,14 +1,13 @@
 <div class="trip">
-  <h1><%= @trip.name %></h1>
   <h2>Info</h2>
   <p>Duration: <%= @trip.duration %></p>
   <p>Start Date: <%= @trip.start_date %></p>
   <p>End Date: <%= @trip.end_date %></p>
-  <p>Start Station: <%= @trip.start_station %></p>
-  <p>End Station: <%= @trip.end_station %></p>
+  <p>Start Station: <%= @trip.start_station_id %></p>
+  <p>End Station: <%= @trip.end_station_id %></p>
   <p>Bike ID: <%= @trip.bike_id %></p>
-  <p>Subscription Type: <%= @trip.subscription_type %></p>
-  <p>Zip Code: <%= @trip.zip_code %></p>
+  <p>Subscription Type: <%= @trip.subscription_id %></p>
+  <p>Zip Code: <%= @trip.zipcode %></p>
   <p><a href="/trips/<%= @trip.id %>/edit">Edit Station</a></p>
   <form action="/trips/<%= @trip.id %>" method="POST">
     <input type="hidden" name="_method" value="DELETE">
