adds methods to station-dashboard and creates trips-dashboard

--- a/app/views/trips/trips-dashboard.erb
+++ b/app/views/trips/trips-dashboard.erb
@@ -1,14 +1,14 @@
-<h1>Station Dashboard</h1>
+<h1>Trips Dashboard</h1>
 
   <ul>
     <li> Total count of stations: <%= Station.total_stations %></li>
     <li> Average bikes available per station: <%= Station.average_bikes_station %></li>
     <li> Most bikes available at a station:<%= Station.max_bikes_station %></li>
     <li> Station(s) where the most bikes are available: <%= Station.stations_most_bikes %></li>
-    <li> Fewest bikes available at a station: <%= Station.fewest_bikes %></li>
-    <li> Station(s) where the fewest bikes are available: <%= Station.find_by_fewest_bikes %></li>
-    <li> Most recently installed station: <%= Station.newest_station %></li>
-    <li> Oldest station: <%= Station.oldest_station %></li>
+    <li> Fewest bikes available at a station: <%= Station.#call_method %></li>
+    <li> Station(s) where the fewest bikes are available: <%= Station.#call_method %></li>
+    <li> Most recently installed station: <%= Station.#call_method %></li>
+    <li> Oldest station: <%= Station.#call_method %></li>
     <li> Number of rides started at this station: <%= Station.#call_method %></li>
     <li> Number of rides ended at this station: <%= Station.#call_method %></li>
     <li> Most frequent destination station: <%= Station.#call_method %></li>
