--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Bike Share! Global Warming is Real</title>
   </head>
-
   <body>
-    <!--Import jQuery before materialize.js-->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="js/materialize.min.js"></script>
+
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="/robots">Home<span class="sr-only">(current)</span></a></li>
+      </div>
+    </nav>
+
+    <div class=containiner>
+      <%= yield %>
+    </div>
   </body>
 </html>
