--- a/app/views/conditions/index.erb
+++ b/app/views/conditions/index.erb
@@ -2,6 +2,7 @@
 
 <div class="conditions">
   <% @conditions.each do |condition| %>
+    <h1><%= @page %></h1>
     <h3>Date: <%= condition.date %></h3>
     <h3>Maximum Temperature: <%= condition.max_temperature %></h3>
     <h3>Mean Temperature: <%= condition.mean_temperature %></h3>
@@ -19,11 +20,13 @@
       <input type="hidden" name="_method" value="DELETE">
       <input type="submit" value="Delete Condition">
     </form>
-  <% end %>
-  <nav aria-label="...">
-    <ul class="pager">
-      <li><a href="#">Previous</a></li>
-      <li><a href="#">Next</a></li>
-    </ul>
-  </nav>
+            <% end %>
+            <div class="pagination">
+              <% if @page < 1 %>
+              <span class="next_page"><a href="/conditions?page=<%= @page + 1 %>" rel="next">Next »</span>
+                <% elsif @page >= 1 %>
+                <span class="prev_page"><a href="/conditions?page=<%= @page - 1 %>" rel="next">« Previous</span>
+                  <span class="next_page"><a href="/conditions?page=<%= @page + 1 %>" rel="next">Next »</span>
+                    <% end %>
+                  </div>
 </div>
