--- a/app/views/trips/show.erb
+++ b/app/views/trips/show.erb
@@ -1,5 +1,5 @@
 <div class="trip">
-  <h2>Info</h2>
+  <h2>Trip Info</h2>
   <p>Duration: <%= @trip.duration %></p>
   <p>Start Date: <%= @trip.start_date %></p>
   <p>End Date: <%= @trip.end_date %></p>
