--- a/app/views/stations/edit.erb
+++ b/app/views/stations/edit.erb
@@ -1,6 +1,10 @@
 <h1>Edit Station</h1>
-  <form action="/stations/<%= @station.id %>" method="POST">
-    <input type="hidden" name="_method" value="PUT"/>
+
+  <div class="row">
+    <form class="col s12" action="/stations/<%= @station.id %>" method="POST">
+      <div class="row">
+        <div class="input-field col s6">
+          <input type="hidden" name="_method" value="PUT"/>
     <input type="text" name="station[name]" value = "<%= @station.name %>" placeholder="Name"/><br>
     <input type="integer" name="station[dock_count]" value="<%= @station.dock_count %>" placeholder="Dock Count"/><br>
     <select name="station[city_id]">
