--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,7 +16,7 @@
     <div class="navbar-fixed">
       <nav>
          <div class="nav-wrapper">
-           <a href="/" class="center brand-logo">Bike Share</a>
+           <a href="/" class="left brand-logo">Bike Share</a>
            <ul class="right hide-on-med-and-down">
             <li><a href="/stations">Stations</a></li>
             <li><a href="/trips">Bike Trips</a></li>
@@ -29,10 +29,10 @@
     <div class=containiner>
       <%= yield %>
     </div>
-
+<!--
     <footer>
         © Team Awesome
-    </footer>
-    
+    </footer>-->
+
   </body>
 </html>
