fixes bugs with weather CRUD

--- a/app/views/conditions/show.erb
+++ b/app/views/conditions/show.erb
@@ -12,6 +12,6 @@
   <p><a href="/conditions/<%= @condition.id %>/edit">Edit Condition</a></p>
   <form action="/conditions/<%= @condition.id %>" method="POST">
     <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete Condition">
+    <input type="submit" value="Delete Weather Condition">
   </form>
 </div>
