adds style to new station view

--- a/app/views/stations/index.erb
+++ b/app/views/stations/index.erb
@@ -21,7 +21,7 @@
         <td><%= station.city.name %></td>
         <td><%= station.installation_date %></td>
 
-        <td><a class="waves-effect waves-light btn btn-small orange darken-4" href='/stations/<%=station.id%>/edit' >Update</a></td>
+        <td><a class="waves-effect waves-light btn btn-small orange darken-4" href='/stations/<%=station.id%>/edit' >Update Station</a></td>
         <td><form action="/stations/<%= station.id %>" method = "POST"/>
 
         <input type="hidden" name="_method" value="DELETE"/>
