--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,7 +3,7 @@
   <head>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="/application.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -26,7 +26,7 @@
       </nav>
      </div>
 
-    <div class=containiner>
+    <div class="container">
       <%= yield %>
     </div>
 <!--
