--- a/app/views/stations/new.erb
+++ b/app/views/stations/new.erb
@@ -1,20 +1,46 @@
 <h1>Create a New Station</h1>
 
-<div class="station-new">
-  <form action='/stations' method="post">
-    <label for="name">Name: </label>
-    <input type="textfield" name="station[name]">
-    <label for="dock_count">Dock Count: </label>
-    <input type="textfield" name="station[dock_count]">
-    <label for="city">City: </label>
-    <select name="station[city_id]">
-      <% @cities.each do |city| %>
-        <option value=<%= city.id %>><%= city.name %></option>
-      <% end %>
-    </select>
+<div class="container">
+  <div class="row">
+    <form class="col s12" action='/stations' method="post">
 
-    <label >Installation Date: </label>
-    <input type="textfield" name="station[installation_date]">
-    <input type="submit" value="Create New Station" />
-  </form>
+      <div class="row">
+
+        <div class="col s4">
+          <input type="textfield" name="station[name]" placeholder="Station Name"class="validate input-field">
+        </br><label for="name">Station Name </label>
+        </div>
+
+        <div class="col s4">
+          <input type="textfield" name="station[dock_count]" class="validate input-field" placeholder="Number of Bike Docks">
+        </br><label for="name">Bike Docks Available</label>
+        </div>
+
+        <div class="col s4">
+          <input type="textfield" name="station[installation_date]" class="validate input-field" placeholder="Date Installed">
+        </br><label for="name">Date Installed</label>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col s12">
+
+
+          <select class="browser-default input-field" name="station[city_id]">
+            <% @cities.each do |city| %>
+              <option value=<%= city.id %>><%= city.name %></option>
+            <% end %>
+          </select>
+          <label for="city">Station City </label>
+        </div>
+
+      </div>
+
+      <a class="waves-effect waves-light btn orange darken-4">
+        <input type="submit" value="Create New Station" />
+      </a>
+
+    </form>
+  </div>
 </div>
