--- a/app/views/stations/edit.erb
+++ b/app/views/stations/edit.erb
@@ -1,26 +1,48 @@
 <h1>Edit Station</h1>
 
+<div class="container">
   <div class="row">
 
     <form class="col s12" action="/stations/<%= @station.id %>" method="POST">
 
       <div class="row">
-        <div class="input-field col s6">
-
+        <div class="col s12">
           <input type="hidden" name="_method" value="PUT"/>
-          <input type="text" name="station[name]" value = "<%= @station.name %>" placeholder="Name" class="validate"/><br/>
-          <input type="integer" name="station[dock_count]" value="<%= @station.dock_count %>" placeholder="Dock Count"/><br/>
+          <input type="text" name="station[name]" value = "<%= @station.name %>" placeholder="Name" class="validate input-field"/>
+          <label for="name">Station Name</label>
+        </div>
+      </div>
 
-    <select name="station[city_id]">
-      <% @cities.each do |city| %>
-        <option value="<%= city.id %>" ><%= city.name %></option>
-      <% end %>
-    </select>
+      <div class="row">
+        <div class="col s12">
+          <input type="text" name="station[dock_count]" value="<%= @station.dock_count %>" placeholder="Dock Count" class="validate input-field" />
+          <label for="dock_count">Number of Bike Docks</label>
+        </div>
+      </div>
 
-    <input type="date" name="station[installation_date]" value="<%= @station.installation_date %>" placeholder="Installation Date"/><br/>
-    <input type="submit" value="Submit Changes"/>
+      <div class="row">
+        <div class="col s12">
+          <select class="browser-default input-field" name="station[city_id]">
+            <% @cities.each do |city| %>
+              <option value="<%= city.id %>" ><%= city.name %></option>
+            <% end %>
+          </select>
+          <label for="city">Station City </label>
+        </div>
+      </div>
 
+
+      <div class="row">
+        <div class="col s12">
+          <input type="date" name="station[installation_date]" value="<%= @station.installation_date %>" placeholder="Installation Date" class="validate input-field"/>
+          </br><label for="name">Date Installed</label>
+        </div>
+      </div>
+
+      <a class="waves-effect waves-light btn orange darken-4">
+        <input type="submit" value="Submit Changes"/>
+      </a>
+
+    </form>
   </div>
-  </div>
-  </form>
 </div>
