--- a/app/views/stations/show.erb
+++ b/app/views/stations/show.erb
@@ -4,6 +4,13 @@
   <p>Dock Count: <%= @station.dock_count %></p>
   <p>City: <%= @station.city.name %></p>
   <p>Installation Date: <%= @station.installation_date %></p>
+  <li> Number of rides started at this station: <%= @station.rides_started_at_station %></li>
+  <li> Number of rides ended at this station: <%= @station.rides_ended_at_station %></li>
+  <li> Most frequent destination station: <%= @station.most_frequent_destination %></li>
+  <!-- <li> Most frequent origination station: <%= @station.#call_method %></li> -->
+  <li> Date with the highest number of trips started at this station: <%= @station.date_with_most_trips %></li>
+  <li> Most frequent zip code for users starting trips at this station: <%= @station.most_frequent_zipcode %></li>
+  <li> Bike ID most frequently starting a trip at this station: <%= @station.most_frequent_starting_bike_id%></li>
   <p><a href="/stations/<%= @station.id %>/edit">Edit Station</a></p>
   <form action="/stations/<%= @station.id %>" method="POST">
     <input type="hidden" name="_method" value="DELETE">
