--- a/app/views/trips/show.erb
+++ b/app/views/trips/show.erb
@@ -1,16 +1,28 @@
-<div class="trip">
-  <h2>Trip Info</h2>
-  <p>Duration: <%= @trip.duration %></p>
-  <p>Start Date: <%= @trip.start_date %></p>
-  <p>End Date: <%= @trip.end_date %></p>
-  <p>Start Station: <%= @trip.start_station_id %></p>
-  <p>End Station: <%= @trip.end_station_id %></p>
-  <p>Bike ID: <%= @trip.bike_id %></p>
-  <p>Subscription Type: <%= @trip.subscription_id %></p>
-  <p>Zip Code: <%= @trip.zipcode %></p>
-  <p><a href="/trips/<%= @trip.id %>/edit">Edit Station</a></p>
-  <form action="/trips/<%= @trip.id %>" method="POST">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete Trip">
-  </form>
-</div>
+<div class="trip container">
+  <div class="row">
+       <div class="col s12 m12">
+         <div class="card blue-grey darken-1">
+           <div class="card-content white-text">
+             <span class="card-title">Trip Info</span>
+             <ul>
+               <li>Duration: <%= @trip.duration %></li>
+               <li>Start Date: <%= @trip.start_date %></li>
+               <li>Start Date: <%= @trip.start_date %></li>
+               <li>End Date: <%= @trip.end_date %></li>
+               <li>Start Station: <%= @trip.start_station_id %></li>
+               <li>End Station: <%= @trip.end_station_id %></li>
+               <li>Bike ID: <%= @trip.bike_id %></li>
+               <li>Subscription Type: <%= @trip.subscription_id %></li>
+               <li>Zip Code: <%= @trip.zipcode %></li>
+             </ul>
+           </div>
+           <div class="card-action">
+             <a href="/trips/<%= @trip.id %>/edit">Edit Station</a>
+             <form action="/trips/<%= @trip.id %>" method="POST">
+               <input type="hidden" name="_method" value="DELETE">
+               <input type="submit" value="Delete Trip">
+             </form>
+           </div>
+         </div>
+       </div>
+     </div>
