--- a/app/views/stations/show.erb
+++ b/app/views/stations/show.erb
@@ -9,10 +9,10 @@
                <li>Dock Count: <%= @station.dock_count %></li>
                <li>City: <%= @station.city.name %></li>
                <li>Installation Date: <%= @station.installation_date %></li>
-               <li>Number of rides started at this station: <%= @station.rides_started_at_station %></li>
-               <li>Number of rides ended at this station: <%= @station.rides_ended_at_station %></li>
+               <li>Number of rides started at this station: <%= @station.rides_started_at_station(@station) %></li>
+               <li>Number of rides ended at this station: <%= @station.rides_ended_at_station(@station) %></li>
                <li>Most frequent destination station: <%= @station.most_frequent_destination %></li>
-               <li></li>
+               <li>Most frequent origination station: <%= @station.most_frequent_origination_station %></li>
                <li>Date with the highest number of trips started at this station: <%= @station.date_with_most_trips %></li>
                <li>Most frequent zip code for users starting trips at this station: <%= @station.most_frequent_zipcode %></li>
                <li> Bike ID most frequently starting a trip at this station: <%= @station.most_frequent_starting_bike_id%></li>
