--- a/app/views/trips/edit.erb
+++ b/app/views/trips/edit.erb
@@ -1,37 +1,27 @@
 <h1>Edit Trip</h1>
-
 <div class="container">
   <form action="/trips/<%= @trip.id %>" method="POST">
-
     <input type="hidden" name="_method" value="PUT"/>
-
-    <input type="text" name="trip[duration]" value = "<%= @trip.duration %>" placeholder="Duration"/><br>
+    <input type="text" name="trip[duration]" value = "<%= @trip.duration %>" /><br>
     <label for="name">Duration (seconds)</label>
-
-
-    <input type="date" name="trip[start_date]" value="<%= @trip.start_date %>" placeholder="Start Date"/><br>
+    <input type="text" name="trip[start_date]" value="<%= @trip.start_date %>" placeholder="Installation Date" class="validate input-field"/><br>
     <label for="name">Start Date</label>
-
-    <input type="date" name="trip[end_date]" value="<%= @trip.end_date %>" placeholder="End Date"/><br>
+    <input type="text" name="trip[end_date]" value="<%= @trip.end_date %>" /><br>
     <label for="name">End Date</label>
-
-    <input type="text" name="trip[zipcode]" placeholder="Zipcode">
+    <input type="text" name="trip[zipcode]" value = "<%= @trip.zipcode %>">
     <label for="name">Zip Code</label>
-
     <select name="trip[start_station_id]" class="browser-default input-field">
       <% @stations.each do |station| %>
         <option value=<%= station.id %>><%= station.name %></option>
       <% end %>
     </select>
     <label for="name">Start Station</label>
-
     <select name="trip[end_station_id]" class="browser-default input-field">
       <% @stations.each do |station| %>
         <option value=<%= station.id %>><%= station.name %></option>
       <% end %>
     </select>
     <label for="name">End Station</label>
-
     <div class="row">
       <div class="col s12">
         <select class="browser-default input-field" name="trip[bike_id]">
@@ -42,7 +32,6 @@
         <label for="name">Bike ID</label>
       </div>
     </div>
-
     <div class="row">
       <div class="col s12">
         <select class="browser-default input-field" name="trip[subscription_id]">
@@ -53,10 +42,8 @@
         <label for="name">Subscription Type</label>
       </div>
     </div>
-
     <a class="waves-effect waves-light btn orange darken-4">
     <input type="submit" value="Submit Changes"/>
   </a>
-
   </form>
 </div>
