adds dashboards uncomplete

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,3 @@
 <body background="images/bike_share_3.jpg">
+
+  <!-- <img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;"> -->
