--- a/app/views/stations/index.erb
+++ b/app/views/stations/index.erb
@@ -1,6 +1,7 @@
 <h1>Bike Share Stations</h1>
 
   <a class="waves-effect waves-light btn light-blue darken-3" href="/stations/new">Create New Station</a>
+  <a class="waves-effect waves-light btn light-blue lighten-3" href="/station-dashboard">Station Dashboard</a>
 
 <table class="bordered striped responsive-table">
   <thead>
