--- a/app/views/conditions/index.erb
+++ b/app/views/conditions/index.erb
@@ -1,5 +1,6 @@
 <h1>Weather Conditions</h1>
 <a class="waves-effect waves-light btn orange darken-4" href="/conditions/new">Create New Condition</a>
+<a class="waves-effect waves-light btn light-blue lighten-3" href="/weather-dashboard">Weather Dashboard</a>
 
 <div class="row">
 <div class="col s12">
