--- a/app/views/conditions/weather-dashboard.erb
+++ b/app/views/conditions/weather-dashboard.erb
@@ -4,19 +4,21 @@
            <div class="col s12 m6">
              <div class="card blue-grey darken-1">
                <div class="card-content white-text">
+                 <h2>This is to display that the page loads, even we didn't get to make the methods work</h2>
                  <ul>
-                   <li> Total count of stations: <%= @trips.total_stations %></li>
-                   <li> Average bikes available per station: <%= @trips.average_bikes_station %></li>
-                   <li> Most bikes available at a station:<%= @trips.max_bikes %></li>
-                   <li> Station(s) where the most bikes are available: <%= @trips.stations_most_bikes %></li>
-                   <li> Fewest bikes available at a station: <%= @trips.fewest_bikes %></li>
-                   <li> Station(s) where the fewest bikes are available: <%= @trips.fewest_bikes%></li>
-                   <li> Most recently installed station: <%= @trips.newest_station %></li>
-                   <%#li> Oldest station: <%=@trips.call_method </li>
-                   <li> Breakout of average number of rides, highest number of rides, and lowest number of rides on days with a high temperature in 10 degree chunks (e.g. average number of rides on days with high temps between fifty and sixty degrees): <%# =@trips.call_method
-                   <li> Breakout of average number of rides, highest number of rides, and lowest number of rides on days with precipitation in half-inch increments.: <%= @trips.call_method
-                   <li> Breakout of average number of rides, highest number of rides, and lowest number of rides on days with mean wind speeds in four mile increments.: <%= @trips.call_method
-                   <li> Breakout of average number of rides, highest number of rides, and lowest number of rides on days with mean visibility in miles in four mile increments: <%= @trips.call_method %>
+                   <%#li> Breakout of average number of rides, highest number of rides,
+                   and lowest number of rides on days with a high temperature in 10 degree chunks
+                   (e.g. average number of rides on days with high temps between fifty and sixty degrees):
+                   <%= @trips.call_method></li>
+                   <li> Breakout of average number of rides, highest number of rides,
+                   and lowest number of rides on days with precipitation in half-inch increments.:
+                   <%= @trips.call_method></li>
+                   <li> Breakout of average number of rides, highest number of rides,
+                   and lowest number of rides on days with mean wind speeds in four mile increments.:
+                   <%= @trips.call_method></li>
+                   <li> Breakout of average number of rides, highest number of rides,
+                   and lowest number of rides on days with mean visibility in miles in four mile increments:
+                   <%= @trips.call_method></li> %>
                  </ul>
                </div>
             <div class="card-action">
