--- a/app/views/stations/station-dashboard.erb
+++ b/app/views/stations/station-dashboard.erb
@@ -1,28 +1,28 @@
 <div class="container">
   <div class="row">
-         <div class="col s12 m6">
+         <div class="col s12 m12">
            <div class="card blue-grey darken-1">
              <div class="card-content white-text">
-               <span class="card-title"><%= @station.name %></span>
-               <h4>Info</h4>
-               <<ul>
+               <span class="card-title"></span>
+               <h4>Station Dashboard</h4>
+               <ul>
                  <li> Total count of stations: <%= @stations.total_stations %></li>
-                 <li> Average bikes available per station: <%= @stations.average_bikes_station %></li>
-                 <li> Most bikes available at a station:<%= @stations.max_bikes_station %></li>
-                 <li> Station(s) where the most bikes are available: <%= @stations.stations_most_bikes %></li>
+                 <li> Average bikes available per station: <%= @stations.average_bikes_per_station %></li>
+                 <li> Most bikes available at a station:<%= @stations.max_bikes %></li>
+                 <li> Station(s) where the most bikes are available: <%= @stations.stations_with_most_bikes %></li>
                  <li> Fewest bikes available at a station: <%= @stations.fewest_bikes %></li>
                  <li> Station(s) where the fewest bikes are available: <%= @stations.find_by_fewest_bikes %></li>
                  <li> Most recently installed station: <%= @stations.newest_station %></li>
                  <li> Oldest station: <%= @stations.oldest_station %></li>
+                 <li> Number of rides started at this station: <%= @stations.rides_started_at_station%></li>
+                 <li> Number of rides ended at this station: <%= @stations.rides_ended_at_station %></li>
+                 <li> Most frequent destination station (for rides that began at this station): <%= @stations.most_frequent_destination %></li>
+                 <li> Most frequent origination station (for rides that ended at this station): <%= @stations.most_frequent_origination_station %></li>
+                 <li> Date with the highest number of trips started at this station: <%= @stations.date_with_most_trips %></li>
+                 <li> Most frequent zip code for users starting trips at this station: <%= @stations.most_frequent_zipcode %></li>
+                 <li> Bike ID most frequently starting a trip at this station: <%= @stations.most_frequent_starting_bike_id %></li>
                </ul>
              </div>
-          <div class="card-action">
-             <a href="/stations/<%= @station.id %>/edit">Edit Station</a>
-             <form action="/stations/<%= @station.id %>" method="POST">
-               <input type="hidden" name="_method" value="DELETE">
-               <input type="submit" value="Delete Station">
-             </form>
-          </div>
         </div>
        </div>
     </div>
