--- a/app/views/trips/index.erb
+++ b/app/views/trips/index.erb
@@ -1,5 +1,6 @@
 <h1>Bike Share Trips</h1>
 <a class="waves-effect waves-light btn orange darken-4" href="/trips/new">Create New Trip</a>
+<a class="waves-effect waves-light btn light-blue lighten-3" href="/trips-dashboard">Trips Dashboard</a>
 
 <table class="bordered striped responsive-table">
     <thead>
