--- a/app/views/trips/trips-dashboard.erb
+++ b/app/views/trips/trips-dashboard.erb
@@ -5,16 +5,19 @@
              <div class="card blue-grey darken-1">
                <div class="card-content white-text">
                  <ul>
-                   <li> Total count of stations: <%= @trips.total_stations %></li>
-                   <li> Average bikes available per station: <%= @trips.average_bikes_station %></li>
-                   <li> Most bikes available at a station:<%= @trips.max_bikes %></li>
-                   <li> Station(s) where the most bikes are available: <%= @trips.stations_most_bikes %></li>
-                   <li> Fewest bikes available at a station: <%= @trips.fewest_bikes %></li>
-                   <li> Station(s) where the fewest bikes are available: <%= @trips.fewest_bikes%></li>
-                   <li> Most recently installed station: <%= @trips.newest_station %></li>
-                   <li> Oldest station: <%= @trips.oldest_station %></li>
-                   <%#<li> Weather on the day with the highest rides: <%# =@trips.call_method>
-                   <li> Weather on the day with the lowest rides: <%= @trips.call method %>
+                   <li> Average duration of a ride: <%= @trips.average_ride_duration %></li>
+                   <li> Longest ride: <%= @trips.longest_ride %></li>
+                   <li> Shortest ride:<%= @trips.shortest_ride %></li>
+                   <li> Station with the most rides as a starting place: <%= @trips.most_popular_starting_station %></li>
+                   <li> Station with the most rides as an ending place: <%= @trips.most_popular_ending_station %></li>
+                   <li> Month by Month breakdown of number of rides with subtotals for each year: <%# <%= @trips.newest_station %></li>
+                   <li> Most ridden bike with total number of rides for that bike: <%= @trips.most_ridden_bike %></li>
+                   <li> Least ridden bike with total number of rides for that bike: <%= @trips.least_ridden_bike %></li>
+                   <li> User subscription type breakout with both count and percentage: <%# <%= @trips.subscription_breakdown_count_percentage %></li>
+                   <li> Single date with the highest number of trips with a count of those trips: <%= @trips.date_most_travelled %></li>
+                   <li> Single date with the lowest number of trips with a count of those trips: <%= @trips.date_least_travelled %></li>
+                   <li> Weather on the day with the highest rides: <%# <= @trips.weather_highest_rides></li> %>
+                   <li> Weather on the day with the lowest rides: <%# <%= @trips.weather_lowest_rides></li> %>
                  </ul>
                </div>
             <div class="card-action">
