--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,5 @@
-<body background="images/bike_share_3.jpg">
-
-  <!-- <img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;"> -->
+<h1>Welcome to Bay Area Bike Share</h1>
+<div class="container"
+<h2></h2>
+<img class="responsive-img" src="imgs/bikesharebridge.jpg" alt="Bike with San Francisco bridge in the background" style="width:500px;height:400px;">
+</div>
