Adds trip model method for weather conditions on the day with fewest trips and respective test. Method isn't working as is but if I pass a string in to date_condition I can pry in and get all the outputs I'm looking for. When I pass in date the return is nil.

--- a/app/views/trips/trips-dashboard.erb
+++ b/app/views/trips/trips-dashboard.erb
@@ -16,4 +16,5 @@
     <li> Date with the highest number of trips started at this station: <%= Station.#call_method %></li>
     <li> Most frequent zip code for users starting trips at this station: <%= Station.#call_method %></li>
     <li> Bike ID most frequently starting a trip at this station: <%= Station.#call_method %></li>
+    <li> Weather conditions on day with fewest rides <%= Trip.conditions_on_fewest_trips_date %></li>
   </ul>
